Website auf Github angepasst

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Freifunk Nord</string>
     <string name="WWW">Website</string>
-    <string name="www">https://github.com/NiJen/</string>
+    <string name="www">https://github.com/NiJen/AndroidFreifunkNord</string>
     <string name="feedback">Feedback</string>
     <string name="email">nijen@gmx.eu</string>
     <string name="menu_settings">Settings</string>
